<resources>
    <string name="app_name">Feliya Finance</string>

    <!--  Bottom Navigation Bar Menu  -->
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Confirmation User Dialog  -->
    <string name="confirmation_dialog_title_confirm">Yes, i\'m sure</string>
    <string name="confirmation_dialog_title_cancel">Cancel</string>

    <!--  Other  -->
    <string name="see_all">see all</string>


    <!--  Auth Activity  -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_title">Login to your Account</string>
    <string name="register_title">Create your Account</string>
    <string name="to_register">Dont\'t have an account?</string>
    <string name="option_auth_login">- Or login with -</string>
    <string name="option_auth_register">Or register with</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!--  Auth Error Handler Information  -->
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_invalid">Email is not valid</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_password_length">Password must be at least 8 characters</string>
    <string name="email_and_password_empty">Email and Password cannot be empty</string>
    <string name="email_already_exists">Email already exists</string>

    <!--  Settings Menu  -->
    <string name="setting_contact">Contact</string>
    <string name="setting_about">About</string>
    <string name="setting_logout">Logout</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_logout_confirmation">Are you sure you want to logout?</string>

    <!--  Fragment Home  -->
    <string name="main_balance_title">Your balance is</string>
    <string name="rp">Rp</string>
    <string name="main_income">Income</string>
    <string name="main_expense">Expense</string>
    <string name="contracts">Contracts</string>
    <string name="transactions">Transactions</string>
    <string name="you_work_with">you work with</string>
    <string name="status_contract_active">Active</string>
    <string name="status_contract_inactive">Inactive</string>
    <string name="status_contract_ongoing">On going</string>
    <string name="status_contract_finish">Finish</string>


</resources>