<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top">

        <TextView
            style="@style/TitleTextScreen"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/settings" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--  Notification  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_bell" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/setting_notification"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="28dp" />
            </LinearLayout>

            <!--  About  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_mail" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/setting_contact"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <!--  Feedback  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_chat" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/setting_feedback"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>

            <!--  Logout  -->
            <LinearLayout
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/setting_logout"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>